[gd_scene load_steps=7 format=3 uid="uid://c8kqlkm41gsmx"]

[ext_resource type="Script" path="res://objects/graph_node.gd" id="1_q3tcj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvwav"]
resource_local_to_scene = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhjff"]
resource_local_to_scene = true
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_color = Color(1, 1, 1, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3ler"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_08sck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bstw"]
bg_color = Color(0.823529, 0.423529, 0.807843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="Area2D" type="Area2D"]
collision_mask = 0
monitoring = false
script = ExtResource("1_q3tcj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_jvwav")

[node name="ColorRect" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(80, 64)
offset_right = 213.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qhjff")

[node name="Selected" type="Panel" parent="ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s3ler")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 2
mouse_filter = 2

[node name="LineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_08sck")
text = "osc~"
expand_to_text_length = true
flat = true
caret_blink = true

[node name="ColorRect" type="PanelContainer" parent="ColorRect/VBoxContainer/LineEdit"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2bstw")

[node name="Connection" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Inputs" type="VBoxContainer" parent="ColorRect/VBoxContainer/Connection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Outputs" type="VBoxContainer" parent="ColorRect/VBoxContainer/Connection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="Specialized" type="MarginContainer" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="item_rect_changed" from="ColorRect" to="ColorRect" method="_item_rect_changed"]
[connection signal="focus_entered" from="ColorRect/VBoxContainer/LineEdit" to="." method="_line_edit_focus_entered"]
[connection signal="focus_exited" from="ColorRect/VBoxContainer/LineEdit" to="." method="_line_edit_focus_exited"]
[connection signal="text_submitted" from="ColorRect/VBoxContainer/LineEdit" to="." method="_line_edit_text_submitted"]
